adding name and regno

--- a/page.html
+++ b/page.html
@@ -57,6 +57,7 @@
 </head>
 <body>
     <h2>Random Registration Number Table</h2>
+    <h3>Bhavya Prakash Khatri 23BAI0137</h3>
     <table id="regTable"></table>
     <div id="seatInfo">Click on a cell to see its seat number.</div>
     <button onclick="generateTable()">Reset Table</button>
